--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,23 @@ Package: irisgolem
 Title: An Amazing Shiny App
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
+    person("firstname", "lastname", , "your@email.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.2),
     golem (>= 0.4.1),
     shiny (>= 1.8.1.1)
+Suggests: 
+    knitr,
+    rmarkdown,
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.1
+VignetteBuilder: knitr
+URL: https://github.com/myrobot2020/irisgolem
+BugReports: https://github.com/myrobot2020/irisgolem/issues
